# GAMES106-HW5

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
cmake/: assimp.cmake  libigl.cmake  openmesh.cmake
include/: QEMDebug.h  QEMOpenMesh.h  QEMUHEMesh.h
include/UHEMesh/: HEMesh.h  THalfEdge.h  TLoopView.h
include/UHEMesh/details/: ForwardDecl.h  HEMesh.inl  TVertex.inl
src/: application.cpp  application.h  assimp_helper.cpp  assimp_helper.h  main.cpp  mesh_reduction.cpp  mesh_reduction.h
